samples/_failures_safe/1761202818_df210a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7999229.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d7999229.c:164:9: error: expected declaration or statement at end of input
  164 |         tokens[token_count].value[0] = '\0';
      |         ^~~~~~
./samples/SAFE/__tmp_d7999229.c:164:9: error: expected declaration or statement at end of input
